--- a/CyberTestWeb/Web.config
+++ b/CyberTestWeb/Web.config
@@ -7,9 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
     <section name="dataCacheClient" type="Microsoft.ApplicationServer.Caching.DataCacheClientSection,Microsoft.ApplicationServer.Caching.Core" allowLocation="true" allowDefinition="Everywhere" />
-
   </configSections>
   <dataCacheClient>
     <hosts>
@@ -22,9 +20,11 @@
     <add key="USER_ACCT" value="CYBERSOFT1" />
     <add key="WCF" value="N" />
     <add key="WCFEndpoint" value="BasicHttpBinding_IWcfCARD" />
-  <add key="CacheClass" value="Cybersoft.Data.RuntimeMemoryCache" /></appSettings>
+    <add key="CacheClass" value="Cybersoft.Data.AppFabricCache" />
+    <!--<add key="CacheClass" value="Cybersoft.Data.RuntimeMemoryCache" />-->
+  </appSettings>
   <connectionStrings>
-    <add name="CARDConnectionString" connectionString="Data Source=192.168.95.106;Initial Catalog=CARD_TEST;User ID=CyberCArd;Password=Passw0rd" providerName="System.Data.SqlClient" />
+    <add name="CARDConnectionString" connectionString="Data Source=192.168.120.91;Initial Catalog=CARD_BOT;User ID=CyberCArd;Password=Passw0rd" providerName="System.Data.SqlClient" />
     <add name="ReportConnectionString" connectionString="Data Source=192.168.95.106;Initial Catalog=CARD_REPORT;User ID=CyberCArd;Password=Passw0rd" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-CyberTestWeb-20150513081143.mdf;Initial Catalog=aspnet-CyberTestWeb-20150513081143;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -75,12 +75,12 @@
             將名為 "DefaultConnection" 的連線字串約更為連線至 SQL Server 的
             執行個體 (包含 SQL Azure 和 SQL Compact) 而不是 SQL Server Express。
       -->
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+    <sessionState mode="Custom" customProvider="AppFabricCacheSessionStoreProvider" timeout="60">
       <providers>
-        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
+        <add name="AppFabricCacheSessionStoreProvider" type="Microsoft.ApplicationServer.Caching.DataCacheSessionStoreProvider,                                             Microsoft.ApplicationServer.Caching.Client, Version=1.0.0.0,                                              Culture=neutral, PublicKeyToken=31bf3856ad364e35" cacheName="cardsession" sharedId="MyApp" />
       </providers>
     </sessionState>
-
+     
   </system.web>
   <system.webServer>
     <modules>
